# storage/api-docs/api-docs.json
@@ -44,13 +44,13 @@
                                             "cep": {
                                                 "type": "string"
                                             },
+                                            "label": {
+                                                "type": "string"
+                                            },
                                             "logradouro": {
                                                 "type": "string"
                                             },
                                             "complemento": {
-                                                "type": "string"
-                                            },
-                                            "unidade": {
                                                 "type": "string"
                                             },
                                             "bairro": {
